force-app/main/default/objects/TV_Series__c/fields/Age_rating__c.field-meta.xml
<CustomField>
    <fullName>Age_rating__c</fullName>
    <label>Age rating</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No age restriction</fullName>
            </value>
            <value>
                <fullName>7+</fullName>
            </value>
            <value>
                <fullName>13+</fullName>
            </value>
            <value>
                <fullName>18+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>