force-app/main/default/objects/TV_Series__c/fields/No_of_episodes__c.field-meta.xml
<CustomField>
    <fullName>No_of_episodes__c</fullName>
    <label>No of episodes</label>
    <summaryForeignKey>TV_Series_Episode__c.TV_Series__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>