force-app/main/default/objects/TV_Series__c/fields/No_of_seasons__c.field-meta.xml
<CustomField>
    <fullName>No_of_seasons__c</fullName>
    <label>No of seasons</label>
    <summaryForeignKey>TV_Series_Season__c.TVSeries__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>