force-app/main/default/objects/TV_Series__c/fields/Series_review__c.field-meta.xml
<CustomField>
    <fullName>Series_review__c</fullName>
    <label>Series review</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>