force-app/main/default/objects/TV_Series__c/fields/TV_Series_Story__c.field-meta.xml
<CustomField>
    <fullName>TV_Series_Story__c</fullName>
    <label>TV Series Story</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>