force-app/main/default/objects/TV_Series__c/fields/TVSeries_Logo__c.field-meta.xml
<CustomField>
    <fullName>TVSeries_Logo__c</fullName>
    <label>TV Series Logo</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>